// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentOutline header blocks present should match snapshot 1`] = `
<div
  className="document-outline"
>
  <ul>
    <TableOfContentsItem
      isValid={true}
      key="0"
      level="H2"
      path={Array []}
      target="3fc15d2e-5d52-40b0-9f54-9b9562adeac0"
    >
      <Component
        format="string"
        tagName="span"
        value="Heading parent"
      />
    </TableOfContentsItem>
    <TableOfContentsItem
      isValid={true}
      key="1"
      level="H3"
      path={Array []}
      target="6eab6ae4-a33a-4e68-a218-2832860095a2"
    >
      <Component
        format="string"
        tagName="span"
        value="Heading child"
      />
    </TableOfContentsItem>
  </ul>
</div>
`;

exports[`DocumentOutline header blocks present should render warnings for multiple h1 headings 1`] = `
<div
  className="document-outline"
>
  <ul>
    <TableOfContentsItem
      isValid={false}
      key="0"
      level="H1"
      path={Array []}
      target="34f77241-c57a-4610-a4a7-f0568d999e07"
    >
      <Component
        format="string"
        tagName="span"
        value="Heading 1"
      />
      <br
        key="incorrect-break-multiple-h1"
      />
      <em
        key="incorrect-message-multiple-h1"
      >
        (Multiple H1 headings are not recommended)
      </em>
    </TableOfContentsItem>
    <TableOfContentsItem
      isValid={false}
      key="1"
      level="H1"
      path={Array []}
      target="34f77241-c57a-4610-a4a7-f0568d999e07"
    >
      <Component
        format="string"
        tagName="span"
        value="Heading 1"
      />
      <br
        key="incorrect-break-multiple-h1"
      />
      <em
        key="incorrect-message-multiple-h1"
      >
        (Multiple H1 headings are not recommended)
      </em>
    </TableOfContentsItem>
  </ul>
</div>
`;
